@@ -8,15 +8,13 @@
 #define SDCCCALL1
 #endif
 
-#if (defined(__SDCC_z80) || defined(__SDCC_z80n) || defined(__SDCC_z180)) && 0
-#define has_z88dk_fastcall 1
+#if defined(__SDCC) && defined(__has_z88dk_fastcall)
 #define Z88DK_FASTCALL  __z88dk_fastcall
 #else
 #define Z88DK_FASTCALL
 #endif
 
-#if defined(__SDCC_stm8)
-#define has_raisonance 1
+#if defined(__SDCC) && defined(__has_raisonance)
 #define RAISONANCE  __raisonance
 #else
 #define RAISONANCE
@@ -24,14 +22,14 @@
 
 #ifdef TEST1
 int f(int i) SDCCCALL0;        /* IGNORE */
-int f(int i) SDCCCALL1 {       /* ERROR(has_sdcccall) */
+int f(int i) SDCCCALL1 {       /* ERROR(__has_sdcccall) */
   return i;
 }
 #endif
 
 #ifdef TEST2
 int f(int i) SDCCCALL1;        /* IGNORE */
-int f(int i) SDCCCALL0 {       /* ERROR(has_sdcccall) */
+int f(int i) SDCCCALL0 {       /* ERROR(__has_sdcccall) */
 
   return i;
 }
@@ -39,14 +37,14 @@ int f(int i) SDCCCALL0 {       /* ERROR(has_sdcccall) */
 
 #ifdef TEST3
 int f(int i) Z88DK_FASTCALL;   /* IGNORE */
-int f(int i) {                 /* ERROR(has_z88dk_fastcall) */
+int f(int i) {                 /* ERROR(__has_z88dk_fastcall) */
   return i;
 }
 #endif
 
 #ifdef TEST4
 int f(int i);                  /* IGNORE */
-int f(int i) Z88DK_FASTCALL {  /* ERROR(has_z88dk_fastcall) */
+int f(int i) Z88DK_FASTCALL {  /* ERROR(__has_z88dk_fastcall) */
 
   return i;
 }
@@ -54,14 +52,14 @@ int f(int i) Z88DK_FASTCALL {  /* ERROR(has_z88dk_fastcall) */
 
 #ifdef TEST5
 int f(int i) RAISONANCE;       /* IGNORE */
-int f(int i) {                 /* ERROR(has_raisonance) */
+int f(int i) {                 /* ERROR(__has_raisonance) */
   return i;
 }
 #endif
 
 #ifdef TEST6
 int f(int i);                  /* IGNORE */
-int f(int i) RAISONANCE {      /* ERROR(has_raisonance) */
+int f(int i) RAISONANCE {      /* ERROR(__has_raisonance) */
 
   return i;
 }
